--- a/Grid1_Testomonial_Grid.html
+++ b/Grid1_Testomonial_Grid.html
@@ -53,11 +53,11 @@
 </head>
 <body>
     <div class="container" >
-        <img class="box1" src="/Images/Comment5.jpg" alt="">
-        <img class="box2" src="/Images/Comment3.jpg" alt="">
-        <img class="box3" src="/Images/Comment1.png" alt="">
-        <img class="box4" src="/Images/Comment4.jpg" alt="">
-        <img class="box5" src="/Images/Comment2.jpg" alt="">
+        <img class="box1" src="Images/Comment5.jpg" alt="">
+        <img class="box2" src="Images/Comment3.jpg" alt="">
+        <img class="box3" src="Images/Comment1.png" alt="">
+        <img class="box4" src="Images/Comment4.jpg" alt="">
+        <img class="box5" src="Images/Comment2.jpg" alt="">
 
     </div>
   
