--- a/Grid6.html
+++ b/Grid6.html
@@ -58,10 +58,10 @@
 </head>
 <body>
     <div class="container" >
-        <img class="first" src="/Images/Comment2.jpg"  alt="">
-        <img class="second" src="/Images/Comment3.jpg" alt="">
-        <img class="third" src="/Images/Comment1.png" alt="">
-        <img class="fourth" src="/Images/Comment5.jpg" alt="">
+        <img class="first" src="Images/Comment2.jpg"  alt="">
+        <img class="second" src="Images/Comment3.jpg" alt="">
+        <img class="third" src="Images/Comment1.png" alt="">
+        <img class="fourth" src="Images/Comment5.jpg" alt="">
  
     </div> 
  
